Fix tests to use port 1443

--- a/docker/default.conf
+++ b/docker/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen 80;
+    listen 1443 ssl;
 
     gzip on;
     gzip_vary on;
@@ -24,19 +24,19 @@ server {
 
     location /ogc {
         proxy_set_header Origin "";
-        proxy_pass http://10.133.7.220/ogc;
+        proxy_pass https://bfs-docker2.intranet.terrestris.de:1443/ogc;
     }
     location /geonetwork {
-        proxy_pass http://10.133.7.220/geonetwork;
+        proxy_pass https://bfs-docker2.intranet.terrestris.de:1443/geonetwork;
     }
     location /catalog-public {
-        proxy_pass http://10.133.7.220/catalog-public;
+        proxy_pass https://bfs-docker2.intranet.terrestris.de:1443/catalog-public;
     }
     location /irix-servlet {
-        proxy_pass http://10.133.7.220/irix-servlet;
+        proxy_pass https://bfs-docker2.intranet.terrestris.de:1443/irix-servlet;
     }
     location /bfs-printservice {
-        proxy_pass http://10.133.7.220/bfs-printservice;
+        proxy_pass https://bfs-docker2.intranet.terrestris.de:1443/bfs-printservice;
     }
     location /ors {
         proxy_pass https://osm.bfs.de/ors;
