--- a/src/package.json
+++ b/src/package.json
@@ -59,17 +59,15 @@
         "test": "test"
     },
     "dependencies": {
-        "antd": "4.24.1",
         "echarts": "^5.4.1",
-        "geostyler": "12.0.0",
-        "geostyler-geojson-parser": "1.0.1",
-        "geostyler-mapbox-parser": "3.1.1",
-        "geostyler-openlayers-parser": "4.1.2",
-        "geostyler-qgis-parser": "2.0.0",
-        "geostyler-sld-parser": "5.0.1",
-        "geostyler-style": "7.2.0",
-        "geostyler-wfs-parser": "2.0.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "geostyler": "18.1.2",
+        "geostyler-geojson-parser": "2.0.0",
+        "geostyler-mapbox-parser": "6.1.1",
+        "geostyler-openlayers-parser": "5.1.2",
+        "geostyler-qgis-parser": "4.0.2",
+        "geostyler-sld-parser": "8.1.0",
+        "geostyler-style": "10.3.0",
+        "geostyler-wfs-parser": "3.0.1",
+        "umd-react": "19.1.0"
     }
 }
