Update dev setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3'
 services:
   bfs-nginx:
-    image: library/nginx:1.15@sha256:23b4dcdf0d34d4a129755fc6f52e1c6e23bb34ea011b315d87e193033bcd1b68
+    image: library/nginx:1.29
     ports:
       - 1443:1443
     depends_on:
