--- a/src/package.json
+++ b/src/package.json
@@ -5,8 +5,8 @@
     "description": "IMIS3 GIS",
     "scripts": {
         "pretest": "npm run lint",
-        "lint": "eslint -c .eslintrc app/ classic/ modern/ overrides/ && eslint -c test/.eslintrc test/",
-        "lint-fix": "eslint --fix -c .eslintrc app/ classic/ modern/ && eslint --fix -c test/.eslintrc test/",
+        "lint": "eslint app/ classic/ modern/ overrides/ && eslint test/",
+        "lint-fix": "eslint --fix app/ classic/ modern/ && eslint --fix test/",
         "test": "npm-run-all --parallel --race test:all",
         "test:all": "npm-run-all test:classic test:modern copy-coverages",
         "test:classic": "karma start karma.conf.js --single-run --toolkit classic",
@@ -26,29 +26,30 @@
     "author": "terrestris GmbH & Co. KG <info@terrestris.de>",
     "license": "GPL-3.0",
     "devDependencies": {
-        "acorn": "8.8.2",
-        "braces": "3.0.2",
-        "eslint": "8.36.0",
+        "acorn": "8.15.0",
+        "braces": "3.0.3",
+        "eslint": "9.39.2",
+        "eslint-config-prettier": "^10.1.8",
         "expect.js": "0.3.1",
-        "express": "4.18.2",
+        "express": "5.2.1",
         "jsduck": "1.1.2",
-        "karma": "6.4.1",
-        "karma-chrome-launcher": "3.1.1",
-        "karma-coverage": "2.2.0",
+        "karma": "6.4.4",
+        "karma-chrome-launcher": "3.2.0",
+        "karma-coverage": "2.2.1",
         "karma-coverage-istanbul-reporter": "3.0.3",
         "karma-expect": "1.1.3",
-        "karma-firefox-launcher": "2.1.2",
+        "karma-firefox-launcher": "2.1.3",
         "karma-mocha": "2.0.1",
         "karma-mocha-reporter": "2.2.5",
         "karma-sinon": "1.0.5",
         "lodash": "4.17.21",
-        "minimatch": "7.4.2",
-        "mocha": "10.2.0",
-        "npm-run-all2": "5.0.0",
-        "nyc": "15.1.0",
-        "rimraf": "4.4.0",
-        "serve-static": "1.15.0",
-        "sinon": "15.0.2"
+        "minimatch": "10.1.1",
+        "mocha": "11.7.5",
+        "npm-run-all2": "8.0.4",
+        "nyc": "17.1.0",
+        "rimraf": "6.1.2",
+        "serve-static": "2.2.1",
+        "sinon": "21.0.1"
     },
     "bugs": {
         "url": "https://github.com/OpenBfS/gis_client/issues"
@@ -68,6 +69,6 @@
         "geostyler-sld-parser": "8.2.0",
         "geostyler-style": "10.5.0",
         "geostyler-wfs-parser": "3.0.1",
-        "umd-react": "19.1.0"
+        "umd-react": "19.2.1"
     }
 }
