fix: build docker image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,12 @@ cache:
   paths:
     - src/node_modules
 
+variables:
+  IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG
+
 stages:
   - test
+  - build
   - deploy
 
 before_script:
@@ -36,7 +40,6 @@ before_script:
 
 test:
   stage: test
-  tags: ['intranet']
   only:
     - branches
   script:
@@ -49,9 +52,17 @@ test:
     - npm run combine-coverages
     - npm run coverage-summary
 
+build:
+  stage: build
+  only:
+    - master@bfs/bfs_koala
+  script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -f Dockerfile.prod src -t ${IMAGE_TAG}
+    - docker push ${IMAGE_TAG}
+
 deploy:
   stage: deploy
-  tags: ['intranet']
   only:
     - master@bfs/bfs_koala
   script:
