--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,8 @@
 # https://hub.docker.com/r/library/node/tags/
 image: terrestris/gitlab-runner-image:node24.4.0-bullseye-jdk11-sencha7
 
+services: []
+
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 cache:
