--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,8 @@ build:
   tags: ['intranet']
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - echo $IMAGE_TAG
+    - echo $CI_REGISTRY_IMAGE
     - docker build -f Dockerfile.prod src -t ${IMAGE_TAG}
     - docker push ${IMAGE_TAG}
 
