fix: generalize pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ before_script:
   - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
   - git submodule sync
   - git submodule update --init --recursive --force
-  - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@code.terrestris.de/terrestris/ext-6.2.0.git /ext
+  - git clone https://gitlab-ci-token:${CI_JOB_TOKEN}@${EXTJS_REPO} /ext
   - cd src
   - ln -s /ext
   - /root/bin/Sencha/Cmd/sencha app build
