--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ build:
   stage: build
   only:
     - master@bfs/bfs_koala
-    - master@Administrator/bfs_koala
+    - master@Administrator/gis_client
   tags: ['intranet']
   script:
     - cd ..
