--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,9 +58,8 @@ test:
 
 build:
   stage: build
-  only:
-    - master@bfs/bfs_koala
-    - master@Administrator/gis_client
+  rules:
+    - if: $CI_COMMIT_REF_NAME == "master"
   tags: ['intranet']
   script:
     - cd ..
