--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,9 +65,9 @@ build:
   script:
     - cd ..
     - export
-    - DOCKER_TLS_VERIFY=0 docker --tlsverify=false --tls=false login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - DOCKER_TLS_VERIFY=0 docker --tlsverify=false --tls=false build -f Dockerfile.prod src -t ${IMAGE_TAG}
-    - DOCKER_TLS_VERIFY=0 docker --tlsverify=false --tls=false push ${IMAGE_TAG}
+    - DOCKER_TLS_VERIFY=0 docker -D --log-level debug --tlsverify=false --tls=false login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - DOCKER_TLS_VERIFY=0 docker -D --log-level debug --tlsverify=false --tls=false build -f Dockerfile.prod src -t ${IMAGE_TAG}
+    - DOCKER_TLS_VERIFY=0 docker -D --log-level debug --tlsverify=false --tls=false push ${IMAGE_TAG}
 
 deploy:
   stage: deploy
