fix: remove debug flags

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,9 +64,9 @@ build:
   tags: ['intranet']
   script:
     - cd ..
-    - docker -D --log-level debug login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    - docker -D --log-level debug build -f Dockerfile.prod src -t ${IMAGE_TAG}
-    - docker -D --log-level debug push ${IMAGE_TAG}
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker build -f Dockerfile.prod src -t ${IMAGE_TAG}
+    - docker push ${IMAGE_TAG}
 
 deploy:
   stage: deploy
